hopefully fix to get image showing

--- a/_posts/2025-02-18-Lego.md
+++ b/_posts/2025-02-18-Lego.md
@@ -8,4 +8,4 @@ background: '/img/posts/FirstProject/Lego.jpg'
 
 This is my first project
 
-[<img src="/img/posts/FirstProject/LegoLogo.jpg>](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
+![<img src="/img/posts/FirstProject/LegoLogo.jpg>](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
