Images loader test 3

--- a/_posts/2025-02-18-Lego.md
+++ b/_posts/2025-02-18-Lego.md
@@ -8,4 +8,5 @@ background: '/img/posts/FirstProject/Lego.jpg'
 
 This is my first project
 
-![<img src="/img/posts/FirstProject/LegoLogo.jpg>](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
+
+[![LegoLogo](/img/posts/FirstProject/LegoLogo.jpg)](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
