--- a/_posts/2025-02-18-Lego.md
+++ b/_posts/2025-02-18-Lego.md
@@ -5,8 +5,25 @@ subtitle: "Data analytics on Lego"
 background: '/img/posts/FirstProject/Lego.jpg'
 ---
 
+# Overview
 
-This is my first project
+This project is a deep dive into the company Lego. Even though there were many datasets to choose from, I decided to only use the themes and sets datasets to limit the amount of analysis. 
 
+From these datasets we can ask alot of interesting questions about the history of the LEGO company, their product offering, and which LEGO set ultimately rules them all:
+
+- What is the biggest LEGO set ever created and how many parts did it have?
+- How did the LEGO company start out? When did the first LEGO sets get released and how many sets did the company sell when it first launched?
+- Which LEGO theme has the most sets?
+- When did the LEGO company increase its product offering? Can we spot a change in the company strategy based on how many themes and sets did it released year-on-year?
+- Did LEGO sets grow in size and complexity over time? Do older LEGO sets tend to have more or fewer parts than newer sets?
+
+# ETL Pipeline
+
+Merged the datasets 
+checked for nulls 
+replaced nulls with unknown 
+
+# What 
+d
 
 [![LegoLogo](/img/posts/FirstProject/LegoLogo.jpg)](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
