--- a/_posts/2025-02-18-Lego.md
+++ b/_posts/2025-02-18-Lego.md
@@ -23,7 +23,23 @@ Merged the datasets
 checked for nulls 
 replaced nulls with unknown 
 
-# What 
-d
+## What is the biggest LEGO set ever created and how many parts did it have?
 
-[![LegoLogo](/img/posts/FirstProject/LegoLogo.jpg)](https://github.com/JamieJ042/JamieJ042.github.io/tree/master/assets/Code/LegoProject/LegoProject.ipynb)
+temp
+
+## How did the LEGO company start out? When did the first LEGO sets get released and how many sets did the company sell when it first launched?
+
+![Graph1](/img/posts/FirstProject/VolumeSets.png)
+
+## Which LEGO theme has the most sets?
+
+temp
+
+## When did the LEGO company increase its product offering? Can we spot a change in the company strategy based on how many themes and sets did it released year-on-year?
+
+temp
+
+## Did LEGO sets grow in size and complexity over time? Do older LEGO sets tend to have more or fewer parts than newer sets?
+
+temp
+
